xen/arm: Add MESON UART driver for Amlogic Meson SoCs
This patch adds driver for UART controller present on Amlogic Meson
SoCs and it has been tested on Nanopi K2 board based on S905 SoC.

Controller registers defination is taken from Linux 4.20.
https://github.com/torvalds/linux/blob/v4.20-rc1/drivers/tty/serial/meson_uart.c

Signed-off-by: Amit Singh Tomar <amittomer25@gmail.com>
Reviewed-by: Andre Pryzwara <andre.pryzwara@arm.com>
Acked-by: Julien Grall <julien.grall@arm.com>

--- a/xen/drivers/char/Kconfig
+++ b/xen/drivers/char/Kconfig
@@ -20,6 +20,14 @@ config HAS_MVEBU
 	  This selects the Marvell MVEBU UART. If you have a ARMADA 3700
 	  based board, say Y.
 
+config HAS_MESON
+	bool "Amlogic MESON UART driver"
+	default y
+	depends on ARM_64
+	help
+	  This selects the Amlogic MESON UART. If you have a Amlogic based
+	  board, say Y.
+
 config HAS_PL011
 	bool "ARM PL011 UART driver"
 	default y
