install pkgconfig files into libdir
Most pkgconfig files contain a Libs: variable, which is either /usr/lib
or /usr/lib64. If a 32bit and a 64bit variant of xen libraries is
installed, the last one wins. As a result compiling for the other
bitsize will fail.

Instead of sharedir use libdir as install target. This matches both the
documentation and the expected result.

Signed-off-by: Olaf Hering <olaf@aepfle.de>
Acked-by: Wei Liu <wei.liu2@citrix.com>

--- a/config/Paths.mk.in
+++ b/config/Paths.mk.in
@@ -58,4 +58,4 @@ XENFIRMWAREDIR           := @XENFIRMWAREDIR@
 XEN_CONFIG_DIR           := @XEN_CONFIG_DIR@
 XEN_SCRIPT_DIR           := @XEN_SCRIPT_DIR@
 
-PKG_INSTALLDIR           := ${SHAREDIR}/pkgconfig
+PKG_INSTALLDIR           := ${libdir}/pkgconfig
