CI: Add a CentOS 6 container and build jobs
CentOS 6 is probably the most frequently broken build, so adding it to CI
would be a very good move.

One problem is that CentOS 6 comes with Python 2.6, and Qemu requires 2.7.
There appear to be no sensible ways to get Python 2.7 into a CentOS 6
environments, so modify the build script to skip the Qemu upstream build
instead.  Additionally, SeaBIOS requires GCC 4.6 or later, so skip it as well.

Signed-off-by: Andrew Cooper <andrew.cooper3@citrix.com>
Acked-by: Wei Liu <wei.liu2@citrix.com>

--- a/automation/scripts/build
+++ b/automation/scripts/build
@@ -2,6 +2,12 @@
 
 $CC --version
 
+# Express the compiler version as an integer.  e.g. GCC 4.9.2 => 0x040902
+cc-ver()
+{
+    $CC -dumpversion | awk -F. '{ printf "0x%02x%02x%02x", $1, $2, $3 }'
+}
+
 # random config or default config
 if [[ "${RANDCONFIG}" == "y" ]]; then
     make -C xen KCONFIG_ALLCONFIG=tools/kconfig/allrandom.config randconfig
@@ -20,6 +26,16 @@ if [[ "${CC}" == "clang" ]]; then
     cfgargs+=("--with-system-ipxe=/usr/lib/ipxe/ipxe.pxe")
     # newlib cannot be built with clang so we cannot build stubdoms
     cfgargs+=("--disable-stubdom")
+fi
+
+# Qemu requires Python 2.7 or later
+if python -c "import sys; res = sys.version_info < (2, 7); exit(not(res))"; then
+    cfgargs+=("--with-system-qemu=/bin/false")
+fi
+
+# SeaBIOS requires GCC 4.6 or later
+if [[ "${CC}" == "gcc" && `cc-ver` -lt 0x040600 ]]; then
+    cfgargs+=("--with-system-seabios=/bin/false")
 fi
 
 ./configure "${cfgargs[@]}"
