--- a/automation/gitlab-ci/build.yaml
+++ b/automation/gitlab-ci/build.yaml
@@ -149,6 +149,16 @@ centos-7-gcc-debug:
   variables:
     CONTAINER: centos:7
 
+centos-6-gcc:
+  extends: .gcc-x86-64-build
+  variables:
+    CONTAINER: centos:6
+
+centos-6-gcc-debug:
+  extends: .gcc-x86-64-build-debug
+  variables:
+    CONTAINER: centos:6
+
 debian-jessie-clang:
   extends: .clang-x86-64-build
   variables:
