automation: fix "build each commit" test
An error was introduced while rebasing 9b8b3f30. The new test
shouldn't depend on anything, otherwise artefacts will be downloaded
from build stage and cause the script to abort.

Signed-off-by: Wei Liu <wei.liu2@citrix.com>

--- a/automation/gitlab-ci/test.yaml
+++ b/automation/gitlab-ci/test.yaml
@@ -12,8 +12,7 @@ build-each-commit-gcc:
     paths:
       - '*.log'
     when: always
-  dependencies:
-    - debian-stretch-gcc-debug
+  dependencies: []
   tags:
     - x86_64
   except:
